# agentic-ai-bootcamp

./: .gitignore  Deployment_Guide.md  Dockerfile  README.Athena.md  README.md  docker-compose.yml  requirements-athena.txt  requirements.txt  settings.json
challenge/: create-zip.sh
challenge/llm-workflow-test/: README.md  main.py
challenge/llm_workflow/: main.py  pyproject.toml
challenge/mcp-server-invoice-test/: README.md  main.py
challenge/nemo_agent_toolkit/: README.md  main.py  pyproject.toml  workflow.yaml
challenge/qna-agent-test/: main.py
challenge/qna_agent/: main.py
challenge/qna_agent/skills_ref/: parser.py  utils.py
tutorial/: start_here.ipynb  start_here_ja.ipynb
tutorial/jupyter_notebook/: 01_deply_nim.sh  01_inference_endpoint.ipynb  02_introduction_mcp.ipynb  02_introduction_mcp_ja.ipynb  03_low_level_mcp.ipynb  03_low_level_mcp_ja.ipynb  04_langraph_agent.ipynb  04_langraph_agent_ja.ipynb  05_nat_demo.ipynb  05_nemo_agent_toolkit.ipynb  06_challenge.ipynb  06_challenge_ja.ipynb  07_bonus_challenge.ipynb  07_bonus_challenge_docker.ipynb  07_bonus_challenge_host.ipynb  07_local_inference_endpoint.ipynb  mcp_client.py  mcp_server_low_level_http.py  movie_db.py  movie_intent_workflow.yml  movie_intent_workflow_tracing.yml  movie_server.py  movie_workflow.yml
tutorial/jupyter_notebook/bonus_challenge/: 07_bonus_challenge.ipynb  (+3 more)
tutorial_ja/.ipynb_checkpoints/: start_here_ja-checkpoint.ipynb
tutorial_ja/jupyter_notebook/: 01_inference_endpoint_ja.ipynb  05_nemo_agent_toolkit_ja.ipynb  movie_intent_classifier.py
(+11 files in other folders)
