[project]
name = "nemo-agent-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nvidia-nat[langchain]>=1.5.0",
    "nvidia-nat[mcp]>=1.5.0",
    "nvidia-nat[phoenix]>=1.5.0",
    "nvidia-nat[eval]>=1.5.0",
    "nvidia-nat[profiling]>=1.5.0",
    "arize-phoenix>=13.15.0",
    "pandas>=2.2",
]
